--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+##### .gitignore for Vim #####
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+#
+##### .gitignore for TeX #####
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
